修复运行时数据太多导致占用过多内存的问题